# zynq-astro-guider

./: .gitignore  CLAUDE.md  README.md
bd/: axis_out_mux.v  create_bd.tcl  create_enet_test.tcl  enet_test_pins.xdc  enet_test_top.v  phase_corr_overlay.dts  phase_corr_top.v  phase_correlator_axi.v  stale_absorber.v  udmabuf_overlay.dts  z7lite_enet.xdc
docs/: architecture.md  bitstream_integration.md  fixed_point.md
golden_model/: pyproject.toml
golden_model/experiments/: rotation_sensitivity.py
golden_model/src/guider_golden/: __init__.py  fixed_point.py  fourier_mellin.py  phase_correlation.py  synth.py
golden_model/tests/: test_fixed_point.py  test_phase_correlation.py  test_rotation.py
hdl/: README.md  pyproject.toml
hdl/ip/: gen_fft_ip.tcl
hdl/sim/: fft_cosim.py  run_fft_cosim.tcl
hdl/src/guider_hdl/: __init__.py  build.py  cordic_ref.py  corner_turn.py  cosim.py  cross_power.py  csr.py  fft_ip.py  fft_pass.py  fixed.py  phase_only.py  phase_stage.py  stream.py  top.py  window.py
hdl/tests/: test_axis.py  test_block_max.py  test_build.py  test_corner_turn.py  test_cross_power.py  test_csr.py  test_fft_pass.py  test_phase_only.py  test_phase_stage.py  test_pipeline.py  test_top.py  test_window.py
